Item bracket too large fix

--- a/src/components/Rocket League/ItemContainer.module.scss
+++ b/src/components/Rocket League/ItemContainer.module.scss
@@ -7,7 +7,6 @@
   display: grid;
   align-items: center;
   /* Min size of 90px */
-  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
-  grid-template-rows: min-content;
+  grid-template-columns: repeat(auto-fit, minmax(85px, 1fr));
   gap: 4px;
 }
